--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="welcome-to-my-personal-page"><a class="header" href="#welcome-to-my-personal-page">Welcome, to my personal page.</a></h1>
+<p align=center>
+<img src="https://raw.githubusercontent.com/MariaLetta/free-gophers-pack/master/characters/png/63.png" alt="Excited universe gopher." width="200"/>
+<img src="https://raw.githubusercontent.com/MariaLetta/free-gophers-pack/master/illustrations/png/20.png" alt="UFO gopher." width="200"/>
+<p align=center>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let mut interests : Vec&lt;&amp;str&gt; = vec!["Computer science",
                                          "Travel",
