--- a/aoc/2024-4.html
+++ b/aoc/2024-4.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 day 3 - Personal page</title>
+        <title>Year 2024 day 4 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,13 +154,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024-day-3"><a class="header" href="#advent-of-code---year-2024-day-3">Advent of code - Year 2024 Day 3</a></h1>
-<p>This is a solution of the <a href="https://adventofcode.com/2024/day/3">day 3</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-4"><a class="header" href="#advent-of-code---year-2024-day-4">Advent of code - Year 2024 Day 4</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/4">day 4</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
-<p>In the first part we only match the regex <code>mul\(([0-9]{1,3}),([0-9]{1,3})\)</code> and compute the result.</p>
+<p>In the first part we create way bigger text by adding its transposition (for vertical ones) and also we add the main and second diagonal (by swapping the order of lines and diagonalization). Lastly we replace all <code>S</code> by <code>SS</code> and <code>X</code> by <code>XX</code> for the overlaping cases. Now for this text we run regex <code>XMAS|SAMX</code> and count the occurances.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
-<p>In the second part we also add <code>do()|don't()</code> and iterate over found values. If we find <code>do()</code> enable computing otherwise for <code>don't()</code> disable it. Then compute the result.</p>
+<p>In the second part we used different approach. That is we iterate over the matrix and if we find <code>A</code> in the middle we create diagonal words and check if they are <code>SAM|MAS</code>.</p>
 <h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
 <pre><code class="language-go">package main
 
@@ -169,7 +169,7 @@ import (
   "log"
   "os"
   "regexp"
-  "strconv"
+  "strings"
 )
 
 func read_file(file_path string) string {
@@ -180,45 +180,122 @@ func read_file(file_path string) string {
   return string(content)
 }
 
+/// Create a table from the input.
+func tabelize(text *string) [][]string {
+  lines := strings.Split(*text, "\n")
+  var table [][]string
+  for _, line := range lines {
+    if len(line) &gt; 0 {
+      table = append(table, strings.Split(line, ""))
+    }
+  }
+  return table
+}
+
+/// Transpose the text as a matrix.
+func transpose(text *string) string {
+  var builder strings.Builder
+  table := tabelize(text)
+  for i, _ := range table[0] {
+    for j, _ := range table {
+      builder.WriteString(string(table[j][i]))
+    }
+    builder.WriteString("\n")
+  }
+  return builder.String()
+}
+
+/// Create all diagonals of the text.
+func diag(text *string) string {
+  var builder strings.Builder
+  table := tabelize(text)
+  for i := len(table[0]) - 1; i &gt;= 0; i-- {
+    for j := 0; j + i &lt; len(table[0]); j++{
+      builder.WriteString(table[j][j+i])
+    }
+    builder.WriteString("\n")
+  }
+  for i := len(table) - 1; i &gt; 0; i-- {
+    for j := 0; j + i &lt; len(table); j++{
+      builder.WriteString(table[i + j][j])
+    }
+    builder.WriteString("\n")
+  }
+  return builder.String()
+}
+
+// Swap the order of lines.
+func swap(text *string) string {
+  var builder strings.Builder
+  lines := strings.Split(*text, "\n")
+  for i := len(lines) - 1; i &gt;= 0; i-- {
+    builder.WriteString(lines[i])
+    builder.WriteString("\n")
+  }
+  return builder.String()
+}
+
+/// Replace all S by SS and X by XX.
+func replace(text *string) string {
+  s := regexp.MustCompile("S")
+  x := regexp.MustCompile("X")
+  return x.ReplaceAllString(s.ReplaceAllString(*text, "SS"), "XX")
+}
+
+func count_xmas(text *string) int {
+  regex := regexp.MustCompile("XMAS|SAMX")
+  found := regex.FindAllString(*text, -1)
+  if found == nil {
+    return 0
+  }
+  return len(found)
+}
+
+func count_x_mas(table [][]string) int {
+  res := 0
+  for i := 1; i &lt; len(table) - 1; i++ {
+    for j := 1; j &lt; len(table[i]) - 1; j++{
+      if table[i][j] == "A" {
+        first_word := table[i-1][j-1] + table[i][j] + table[i+1][j+1]
+        second_word := table[i-1][j+1] + table[i][j] + table[i+1][j-1]
+        regex := regexp.MustCompile("MAS|SAM")
+        if regex.FindAllString(first_word, 1) != nil &amp;&amp; regex.FindAllString(second_word, 1) != nil {
+          res += 1
+        }
+      }
+    }
+  }
+  return res
+}
+
 func part1() {
   var result int
   var content = read_file("INPUT")
-  regex := regexp.MustCompile("mul\\(([0-9]{1,3}),([0-9]{1,3})\\)")
-  found := regex.FindAllStringSubmatch(content, -1)
-  for _, f := range found {
-    nr1, _ := strconv.Atoi(f[1])
-    nr2, _ := strconv.Atoi(f[2])
-    result += nr1 * nr2
-  }
+  var builder strings.Builder
+  swapped := swap(&amp;content)
+  builder.WriteString(content)
+  builder.WriteString("\n")
+  builder.WriteString(transpose(&amp;content))
+  builder.WriteString("\n")
+  builder.WriteString(diag(&amp;content))
+  builder.WriteString("\n")
+  builder.WriteString(diag(&amp;swapped))
+  text := builder.String()
+  text = replace(&amp;text)
+  result = count_xmas(&amp;text)
   fmt.Println("Part 1: ", result)
 }
 
 func part2() {
   var result int
-  content := read_file("INPUT")
-  regex := regexp.MustCompile("do\\(\\)|don't\\(\\)|mul\\(([0-9]{1,3}),([0-9]{1,3})\\)")
-  found := regex.FindAllStringSubmatch(content, -1)
-  enabled := true
-  for _, f := range found {
-    switch f[0] {
-    case "do()":
-      enabled = true
-    case "don't()":
-      enabled = false
-    default:
-      if enabled {
-        nr1, _ := strconv.Atoi(f[1])
-        nr2, _ := strconv.Atoi(f[2])
-        result += nr1 * nr2
-      }
-    }
-  }
-
+  var content = read_file("INPUT")
+  table := tabelize(&amp;content)
+  result = count_x_mas(table)
   fmt.Println("Part 2: ", result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 3 - Mull It Over")
+  fmt.Println("Year 2024 day 4 - Ceres Search")
   part1()
   part2()
 }
@@ -228,11 +305,11 @@ func main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-2.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-3.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-4.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -242,11 +319,11 @@ func main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-2.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-3.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-4.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
