--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -165,6 +165,7 @@
 <li><a href="2024-1.html">Day 1</a></li>
 <li><a href="2024-2.html">Day 2</a></li>
 <li><a href="2024-3.html">Day 3</a></li>
+<li><a href="2024-4.html">Day 4</a></li>
 </ul>
 
                     </main>
