--- a/aoc/2024-5.html
+++ b/aoc/2024-5.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 - Personal page</title>
+        <title>Year 2024 day 5 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,30 +154,150 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-5"><a class="header" href="#advent-of-code---year-2024-day-5">Advent of code - Year 2024 Day 5</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/5">day 5</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
-<p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming languange</a> to solve all problems. Lets see how far I will get by doing so.</p>
-<p>Beside solving each problem I will be focusing on the readibility of the code.</p>
-<p><img src="https://raw.githubusercontent.com/MariaLetta/free-gophers-pack/master/illustrations/png/2.png" alt="Gopher this is fine" /></p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2024-1.html">Day 1</a></li>
-<li><a href="2024-2.html">Day 2</a></li>
-<li><a href="2024-3.html">Day 3</a></li>
-<li><a href="2024-4.html">Day 4</a></li>
-<li><a href="2024-5.html">Day 5</a></li>
-</ul>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>For both cases we read the file via regex and filter out the wrong sequences and good sequences. That is for each page in single order we check previous pages if they violate some rules. Then we just compute the sum of middle pages.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>For the second part we consider only the incorrect ones. We go by pages and check their violations. If we find some we put the vilated pages behind the current page while removing the violated ones. And proceed by the corrected page onwards, because the pages inserted afterward may be wrong.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "strings"
+  "time"
+)
+
+func read_file(file_path string) (map[int][]int, [][]int) {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  rules_regex := regexp.MustCompile("([0-9]+)\\|([0-9]+)")
+  ordering_regex := regexp.MustCompile("(:?[0-9]+,)+[0-9]+")
+  rules := make(map[int][]int)
+  found_rules := rules_regex.FindAllStringSubmatch(string(content), -1)
+  for _, rule := range found_rules {
+    first, _ := strconv.Atoi(rule[1])
+    second, _ := strconv.Atoi(rule[2])
+    val, ok := rules[first]
+    if ok {
+      rules[first] = append(val, second)
+    } else {
+      rules[first] = []int{second}
+    }
+  }
+  var orders [][]int
+  found_orders := ordering_regex.FindAllString(string(content), -1)
+  for _, order := range found_orders {
+    splited := strings.Split(order, ",")
+    var order_nr []int
+    for _, s := range splited {
+      number, _ := strconv.Atoi(s)
+      order_nr = append(order_nr, number)
+    }
+    orders = append(orders, order_nr)
+  }
+  return rules, orders
+}
+
+func filter(rules map[int][]int, orders [][]int) ([][]int, [][]int) {
+  var correct [][]int
+  var incorrect [][]int
+outer:
+  for _, order := range orders {
+    for i, page := range order {
+      rule, ok := rules[page]
+      if ok {
+        for _, prev := range order[:i] {
+          for _, r := range rule {
+            if r == prev {
+              incorrect = append(incorrect, order)
+              continue outer
+            }
+          }
+        }
+      }
+    }
+    correct = append(correct, order)
+  }
+  return correct, incorrect
+}
+
+func fix(rules map[int][]int, order []int) []int {
+  for k := 0; k &lt; len(order); k++ {
+    var wrong []int
+    rule, ok := rules[order[k]]
+    if ok {
+      for j := 0; j &lt; k; j++ {
+        prev := order[j]
+        for _, r := range rule {
+          if prev == r {
+            wrong = append(wrong, prev)
+            order = append(order[:j], order[j+1:]...)
+            k--
+            j--
+          }
+        }
+      }
+    }
+    if len(wrong) &gt; 0 {
+      var fixed []int
+      fixed = append(fixed, order[:k+1]...)
+      fixed = append(fixed, wrong[:]...)
+      fixed = append(fixed, order[k+1:]...)
+      order = fixed
+    }
+  }
+  return order
+}
+
+func part1() {
+  var result int
+  rules, orders := read_file("INPUT")
+  start := time.Now()
+  correct, _ := filter(rules, orders)
+  for _, cor := range correct {
+    result += cor[len(cor)/2]
+  }
+  end := time.Now()
+  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+}
+
+func part2() {
+  var result int
+  rules, orders := read_file("INPUT")
+  start := time.Now()
+  _, incorrect := filter(rules, orders)
+  for _, inc := range incorrect {
+    result += fix(rules, inc)[len(inc)/2]
+  }
+  end := time.Now()
+  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+}
+
+func main() {
+  fmt.Println("Year 2024 day 5 - Print Queue")
+  part1()
+  part2()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-4.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -187,11 +307,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-4.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
