--- a/aoc/2024-6.html
+++ b/aoc/2024-6.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 day 5 - Personal page</title>
+        <title>Year 2024 day 6 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,32 +154,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024-day-5"><a class="header" href="#advent-of-code---year-2024-day-5">Advent of code - Year 2024 Day 5</a></h1>
-<p>This is a solution of the <a href="https://adventofcode.com/2024/day/5">day 5</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-6"><a class="header" href="#advent-of-code---year-2024-day-6">Advent of code - Year 2024 Day 6</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/6">day 6</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
-<p>For both cases we read the file via regex and filter out the wrong sequences and good sequences. That is for each page in single order we check previous pages if they violate some rules. Then we just compute the sum of middle pages.</p>
+<p>In the first part we only simulate the steps of the guard and mark visited places on the map. Afterward we count the number of such visited places.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
-<p>For the second part we consider only the incorrect ones. We go by pages and check their violations. If we find some we put the vilated pages behind the current page while removing the violated ones. And proceed by the corrected page onwards, because the pages inserted afterward may be wrong.</p>
-<pre><code class="language-txt">-----------
-| |X| |O| |
------------
-   ^   ^
-   j   k
-
----------
-| | |O| |
----------
-   ^ ^
-   j k
-
-
------------
-| | |O|X| |
------------
-	 ^
-	 k
-</code></pre>
+<p>In the second part we also compute the visited places as in previous step to see candidates for obstacles. Because we may easily see that putting an obstacle outside the path is worthless. Then we put the obstacle into the map and test if we find loop or not. If so count such instance and move on. <em>Note that this is not close to optimal solution, since we are computing the prefix of the path over and over again. It would be good idea to remember previous path to not compute it again.</em> <strong>On the other hand given solution terminates with the result after a few seconds (approximately 3s), therefore it is not worth the time to optimize the code.</strong></p>
 <h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
 <pre><code class="language-go">package main
 
@@ -187,103 +168,96 @@ import (
   "fmt"
   "log"
   "os"
-  "regexp"
-  "strconv"
   "strings"
   "time"
 )
 
-func read_file(file_path string) (map[int][]int, [][]int) {
+type Map [][]bool
+type Position [2]int
+
+func read_file(file_path string) (Map, Position) {
   content, err := os.ReadFile(file_path)
   if err != nil {
     log.Fatal(err)
   }
-  rules_regex := regexp.MustCompile("([0-9]+)\\|([0-9]+)")
-  ordering_regex := regexp.MustCompile("(:?[0-9]+,)+[0-9]+")
-  rules := make(map[int][]int)
-  found_rules := rules_regex.FindAllStringSubmatch(string(content), -1)
-  for _, rule := range found_rules {
-    first, _ := strconv.Atoi(rule[1])
-    second, _ := strconv.Atoi(rule[2])
-    val, ok := rules[first]
-    if ok {
-      rules[first] = append(val, second)
-    } else {
-      rules[first] = []int{second}
+  lines := strings.Split(string(content), "\n")
+  var m (Map)
+  var pos Position
+  for i, line := range lines {
+    if len(line) &lt;= 0 {
+      continue
     }
-  }
-  var orders [][]int
-  found_orders := ordering_regex.FindAllString(string(content), -1)
-  for _, order := range found_orders {
-    splited := strings.Split(order, ",")
-    var order_nr []int
-    for _, s := range splited {
-      number, _ := strconv.Atoi(s)
-      order_nr = append(order_nr, number)
-    }
-    orders = append(orders, order_nr)
-  }
-  return rules, orders
-}
-
-func filter(rules map[int][]int, orders [][]int) ([][]int, [][]int) {
-  var correct [][]int
-  var incorrect [][]int
-outer:
-  for _, order := range orders {
-    for i, page := range order {
-      rule, ok := rules[page]
-      if ok {
-        for _, prev := range order[:i] {
-          for _, r := range rule {
-            if r == prev {
-              incorrect = append(incorrect, order)
-              continue outer
-            }
-          }
-        }
+    row := make([]bool, len(line))
+    for j, char := range strings.Split(line, "") {
+      switch char {
+      case ".":
+        row[j] = true
+      case "#":
+        row[j] = false
+      case "^":
+        pos = [2]int{i, j}
+        row[j] = true
       }
     }
-    correct = append(correct, order)
+    m = append(m, row)
   }
-  return correct, incorrect
+  return m, pos
 }
 
-func fix(rules map[int][]int, order []int) []int {
-  for k := 0; k &lt; len(order); k++ {
-    var wrong []int
-    rule, ok := rules[order[k]]
-    if ok {
-      for j := 0; j &lt; k; j++ {
-        prev := order[j]
-        for _, r := range rule {
-          if prev == r {
-            wrong = append(wrong, prev)
-            order = append(order[:j], order[j+1:]...)
-            k--
-            j--
-          }
-        }
-      }
-    }
-    if len(wrong) &gt; 0 {
-      var fixed []int
-      fixed = append(fixed, order[:k+1]...)
-      fixed = append(fixed, wrong[:]...)
-      fixed = append(fixed, order[k+1:]...)
-      order = fixed
-    }
+func guard_step(m Map, pos Position, step Position) (Position, Position, bool) {
+  new_pos := [2]int{pos[0] + step[0], pos[1] + step[1]}
+  inside := new_pos[0] &lt; len(m) &amp;&amp; new_pos[0] &gt;= 0 &amp;&amp; new_pos[1] &lt; len(m[0]) &amp;&amp; new_pos[1] &gt;= 0
+  if inside &amp;&amp; m[new_pos[0]][new_pos[1]] {
+    return new_pos, step, inside
+  } else if inside {
+    step[0], step[1] = step[1], -step[0]
+    inside := pos[0] &lt; len(m) &amp;&amp; pos[0] &gt;= 0 &amp;&amp; pos[1] &lt; len(m[0]) &amp;&amp; pos[1] &gt;= 0
+    return pos, step, inside
+  } else {
+    return new_pos, step, false
   }
-  return order
+}
+
+func found_visited(m Map, pos Position) Map {
+  visited := make(Map, len(m))
+  for i := range visited {
+    visited[i] = make([]bool, len(m[i]))
+  }
+  visited[pos[0]][pos[1]] = true
+  step := [2]int{-1, 0}
+  pos, step, ok := guard_step(m, pos, step)
+  for ok {
+    visited[pos[0]][pos[1]] = true
+    pos, step, ok = guard_step(m, pos, step)
+  }
+  return visited
+}
+
+func is_loop(m Map, pos Position) bool {
+  visited := make(map[[4]int]bool)
+  step := [2]int{-1, 0}
+  visited[[4]int{pos[0], pos[1], step[0], step[1]}] = true
+  pos, step, ok := guard_step(m, pos, step)
+  _, hash_ok := visited[[4]int{pos[0], pos[1], step[0], step[1]}]
+  for ok &amp;&amp; !hash_ok {
+    _, hash_ok = visited[[4]int{pos[0], pos[1], step[0], step[1]}]
+    visited[[4]int{pos[0], pos[1], step[0], step[1]}] = true
+    pos, step, ok = guard_step(m, pos, step)
+  }
+  return hash_ok
 }
 
 func part1() {
   var result int
-  rules, orders := read_file("INPUT")
   start := time.Now()
-  correct, _ := filter(rules, orders)
-  for _, cor := range correct {
-    result += cor[len(cor)/2]
+  m, pos := read_file("INPUT")
+  visited := found_visited(m, pos)
+  for i := range visited {
+    for j := range visited[i] {
+      if visited[i][j] {
+        result += 1
+      }
+    }
   }
   end := time.Now()
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
@@ -291,18 +265,31 @@ func part1() {
 
 func part2() {
   var result int
-  rules, orders := read_file("INPUT")
   start := time.Now()
-  _, incorrect := filter(rules, orders)
-  for _, inc := range incorrect {
-    result += fix(rules, inc)[len(inc)/2]
+  m, pos := read_file("INPUT")
+  visited_map := found_visited(m, pos)
+  var visited_pos [][2]int
+  for i := range visited_map {
+    for j := range visited_map[i] {
+      if visited_map[i][j] {
+        visited_pos = append(visited_pos, [2]int{i, j})
+      }
+    }
   }
+  for _, obstacle := range visited_pos {
+    m[obstacle[0]][obstacle[1]] = false
+    if is_loop(m, pos) {
+      result += 1
+    }
+    m[obstacle[0]][obstacle[1]] = true
+  }
+
   end := time.Now()
   fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 5 - Print Queue")
+  fmt.Println("Year 2024 day 6 - Guard Gallivant")
   part1()
   part2()
 }
@@ -312,11 +299,11 @@ func main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-4.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-5.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-6.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -326,11 +313,11 @@ func main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-4.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-5.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-6.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
