--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -167,6 +167,7 @@
 <li><a href="2024-3.html">Day 3</a></li>
 <li><a href="2024-4.html">Day 4</a></li>
 <li><a href="2024-5.html">Day 5</a></li>
+<li><a href="2024-6.html">Day 6</a></li>
 </ul>
 
                     </main>
